--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -383,6 +383,6 @@ The text you enter will appear directly within the box as you type." onchange="s
             return 'Sure?';
         };
     </script>
-
+    <!-- This was made by DRAGEno01. -->
 </body>
 </html>
