--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -278,7 +278,7 @@ The text you enter will appear directly within the box as you type." onchange="s
         }
 
 
-        let text = "Do you agree to us storing cookies?\nIf you press no, you will be redirected.";
+        let text = "Do you agree to us storing cookies?\nIf you press cancel, you will be redirected.";
         if (confirm(text) == true) {
             alert("Thank you.")
             document.cookie = "allowCookies=true"
