--- a/projects/mainprojects/AndersonStateRP/index.html
+++ b/projects/mainprojects/AndersonStateRP/index.html
@@ -65,5 +65,8 @@
 
         }
     </script>
+    <script>
+        window.history.pushState("pageTitle", "MDT Login", "/?andersonmdt");
+    </script>
 </body>
 </html>
