--- a/projects/mainprojects/AndersonStateRP/auth/index.html
+++ b/projects/mainprojects/AndersonStateRP/auth/index.html
@@ -326,6 +326,9 @@
             }
         }
     </script>
+    <script>
+        window.history.pushState("pageTitle", "MDT", "/?andersonmdt");
+    </script>
 </body>
 
 </html>
