--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             if(window.location.href == "https://drageno01.github.io/?oxley" || window.location.href == "https://drageno01.github.io/#oxley"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?andersonmdt" || window.location.href == "https://drageno01.github.io/#andersonmdt"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/AndersonStateRP/index.html")
+            }
         }
     </script>
 </html>
