--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>DRAGEno01 GitHub</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Lilita+One&family=Notable&display=swap');
         body {
