--- a/projects/mainprojects/AndersonStateRP/auth/index.html
+++ b/projects/mainprojects/AndersonStateRP/auth/index.html
@@ -158,13 +158,13 @@
 
     <script>
         function logout() {
-            document.cookie = `status=signedOut; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/`
-            if (document.cookie.indexOf('status=') === -1) {
+            document.cookie = `AndersonRPstatus=signedOut; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/`
+            if (document.cookie.indexOf('AndersonRPstatus=') === -1) {
                 window.location.replace("../index.html")
             }
         }
 
-        if (document.cookie.indexOf('status=') === -1) {
+        if (document.cookie.indexOf('AndersonRPstatus=') === -1) {
             window.location.replace("../index.html")
         }
     </script>
@@ -173,7 +173,7 @@
         //let webhook = "\x68\x74\x74\x70\x73\x3A\x2F\x2F\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x31\x39\x30\x32\x39\x37\x36\x37\x31\x32\x39\x30\x38\x35\x39\x36\x32\x30\x2F\x57\x5A\x5A\x59\x41\x4B\x4C\x6B\x71\x54\x76\x31\x4B\x73\x66\x64\x7A\x70\x76\x73\x79\x4B\x5F\x48\x32\x46\x5F\x6C\x4A\x6D\x42\x30\x2D\x44\x45\x63\x39\x2D\x68\x57\x57\x68\x66\x4E\x36\x4E\x6F\x63\x59\x79\x59\x38\x57\x2D\x67\x70\x68\x71\x52\x34\x72\x36\x4B\x44\x73\x66\x38\x6A"
         let sceneWebhook = "\x68\x74\x74\x70\x73\x3A\x2F\x2F\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x31\x39\x30\x32\x39\x34\x36\x38\x36\x37\x37\x30\x39\x32\x39\x36\x37\x34\x2F\x6D\x4B\x79\x33\x35\x41\x31\x32\x76\x32\x52\x57\x4E\x46\x43\x74\x63\x4E\x58\x67\x6E\x76\x55\x56\x35\x4A\x79\x47\x65\x6D\x50\x57\x62\x4A\x6F\x30\x57\x64\x6E\x50\x30\x39\x5F\x54\x4A\x7A\x6E\x33\x50\x69\x58\x78\x51\x48\x75\x77\x49\x78\x61\x59\x39\x6F\x30\x4C\x6F\x43\x48\x48"
         let trafficWebhook = "\x68\x74\x74\x70\x73\x3A\x2F\x2F\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x31\x39\x31\x38\x38\x32\x34\x38\x30\x30\x38\x35\x36\x33\x35\x31\x32\x32\x2F\x4A\x57\x7A\x62\x6C\x4F\x7A\x58\x50\x63\x35\x32\x6A\x4B\x33\x34\x49\x55\x2D\x67\x6C\x54\x49\x69\x4E\x56\x75\x59\x4F\x4E\x33\x58\x6E\x46\x4B\x50\x76\x4C\x33\x62\x7A\x30\x4C\x69\x72\x58\x76\x37\x75\x75\x32\x30\x77\x64\x48\x72\x32\x4F\x5F\x65\x31\x75\x4D\x49\x63\x79\x62\x5F"
-        let robloxID = getCookie("status")
+        let robloxID = getCookie("AndersonRPstatus")
 
         function getCookie(name) {
             const value = `; ${document.cookie}`;
@@ -302,9 +302,9 @@
                 const parts = value.split(`; ${name}=`);
                 if (parts.length === 2) return parts.pop().split(';').shift();
             }
-            let patrolCheck = getCookie("patrol")
+            let patrolCheck = getCookie("AndersonRPpatrol")
             if (patrolCheck === "none" || patrolCheck === undefined) {
-                document.cookie = `patrol=${AuDate}`
+                document.cookie = `AndersonRPpatrol=${AuDate}`
                 document.getElementById("onDuty").style.display = "block"
             } else {
                 const webhook = "\x68\x74\x74\x70\x73\x3A\x2F\x2F\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x31\x39\x30\x32\x39\x34\x35\x35\x36\x37\x33\x34\x39\x31\x34\x36\x32\x31\x2F\x76\x72\x46\x41\x74\x70\x4B\x69\x69\x47\x57\x73\x6A\x79\x32\x31\x5F\x46\x6E\x4E\x54\x65\x68\x5A\x5A\x42\x44\x52\x67\x35\x4F\x55\x31\x6B\x71\x38\x38\x74\x77\x44\x33\x37\x6F\x2D\x51\x4F\x6F\x37\x77\x65\x6E\x50\x75\x68\x4E\x51\x76\x62\x48\x46\x69\x62\x64\x41\x56\x36\x6C\x33"
@@ -316,11 +316,11 @@
                     username: `New Patrol Log`,
                     // avatar_url: "",
                     // url: `https://www.roblox.com/users/${robloxID}`,
-                    content: `## Partol Information \n\n **Start Time:** \n${getCookie("patrol")}\n\n **End Time:** \n${AuDate}\n\n **Officer:** \n<https://www.roblox.com/users/${robloxID}>`
+                    content: `## Partol Information \n\n **Start Time:** \n${getCookie("AndersonRPpatrol")}\n\n **End Time:** \n${AuDate}\n\n **Officer:** \n<https://www.roblox.com/users/${robloxID}>`
                 }
 
                 request.send(JSON.stringify(params));
-                document.cookie = "patrol=none"
+                document.cookie = "AndersonRPpatrol=none"
                 document.getElementById("offDuty").style.display = "block"
                 window.location.href = window.location.href
             }
