--- a/projects/mainprojects/AndersonStateRP/auth/index.html
+++ b/projects/mainprojects/AndersonStateRP/auth/index.html
@@ -160,12 +160,12 @@
         function logout() {
             document.cookie = `AndersonRPstatus=signedOut; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/`
             if (document.cookie.indexOf('AndersonRPstatus=') === -1) {
-                window.location.replace("../index.html")
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/AndersonStateRP/index.html")
             }
         }
 
         if (document.cookie.indexOf('AndersonRPstatus=') === -1) {
-            window.location.replace("../index.html")
+            window.location.replace("https://drageno01.github.io/projects/mainprojects/AndersonStateRP/index.html")
         }
     </script>
 
