--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -91,5 +91,8 @@
         }
         setInterval(checkCookie,100)
     </script>
+    <script>
+        window.history.pushState("pageTitle", "Login - MCC", "/?mcc");
+    </script>
 </body>
 </html>
