--- a/projects/sideprojects/mcc/auth/home.html
+++ b/projects/sideprojects/mcc/auth/home.html
@@ -184,5 +184,8 @@
             if (parts.length === 2) return parts.pop().split(';').shift();
         }
     </script>
+    <script>
+        window.history.pushState("pageTitle", "Home - MCC", "/?mcc");
+    </script>
 </body>
 </html>
