--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             if(window.location.href == "https://drageno01.github.io/?andersonmdt" || window.location.href == "https://drageno01.github.io/#andersonmdt"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/AndersonStateRP/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?mcc" || window.location.href == "https://drageno01.github.io/#mcc"){
+                window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
+            }
         }
     </script>
 </html>
