--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -72,7 +72,7 @@
         function login(){
             if(user.value == username && pass.value == password){
                 document.cookie = `loginPass=${loginPassPass}`
-                window.location.replace("auth/home.html")
+                window.location.replace("https://www.drageno01.github.io/projects/sideprojects/mcc/auth/home.html")
             }else{
                 alert("Incorrect Username or Password")
             }
@@ -86,7 +86,7 @@
 
         function checkCookie(){
             if(loginPass == loginPassPass){
-                window.location.replace("auth/home.html")
+                window.location.replace("https://www.drageno01.github.io/projects/sideprojects/mcc/auth/home.html")
             }
         }
         setInterval(checkCookie,100)
