--- a/projects/sideprojects/mcc/auth/home.html
+++ b/projects/sideprojects/mcc/auth/home.html
@@ -170,12 +170,12 @@
         let loginPass = getCookie("loginPass")
 
         if(loginPass.value != loginPassPass){
-            window.location.replace("https://www.drageno01.github.io/projects/sideprojects/mcc/index.html")
+            window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
         }
 
         function logout(){
             document.cookie = "loginPass=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-            window.location.replace("https://www.drageno01.github.io/projects/sideprojects/mcc/index.html")
+            window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
         }
 
         function getCookie(name) {
