--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -246,9 +246,10 @@
         }
 
         function checkCookie(){
+            loginPass = getCookie("loginPass")
             if(loginPass == loginPassPass){
                 showLoggedIn()
-            }else{
+            }else if(loginPass != loginPassPass){
                 hideLoggedIn()
             }
         }
