--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -142,7 +142,7 @@
                 <table>
                     <td width="5%"></td>
                     <td width="80%"><h1>Minecraft Club</h1></td>
-                    <td width="15%"><button onclick="logoutOfCookies()">Logout</button></td>
+                    <td width="15%"><button onclick="document.cookie = 'loginPass=;'">Logout</button></td>
                 </table>
             </div>
             <br>
