--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -123,6 +123,15 @@
         .error p {
             color: lightgray;
         }
+        h1:hover {
+            cursor: default;
+        }
+        p:hover {
+            cursor: default;
+        }
+        button:hover {
+            cursor: crosshair;
+        }
     </style>
 </head>
 <body>
