--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -231,52 +231,7 @@
         }
     </script>
     <script>
-        let username = "\x6D\x63\x63"
-        let password = "\x6D\x63\x63\x32\x30\x32\x34"
-        let loginPassPass = `\x61\x6C\x6C\x6F\x77\x65\x64`
-        let user = document.getElementById("user")
-        let pass = document.getElementById("pass")
-
-        let loginPass = getCookie("loginPass")
-
-        function login(){
-            if(user.value == username && pass.value == password){
-                document.cookie = `loginPass=${loginPassPass}`
-                showLoggedIn()
-            }else{
-                alert("Incorrect Username or Password")
-            }
-        }
-
-        function getCookie(name) {
-        const value = `; ${document.cookie}`;
-        const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-        }
-
-        function checkCookie(){
-            loginPass = getCookie("loginPass")
-            if(loginPass == loginPassPass){
-                showLoggedIn()
-            }else if(loginPass != loginPassPass){
-                hideLoggedIn()
-            }
-        }
-
-        function showLoggedIn(){
-            document.getElementById("logedin").style.display = "block"
-            document.getElementById("login").style.display = "none"
-        }
-
-        function hideLoggedIn(){
-            document.getElementById("logedin").style.display = "none"
-            document.getElementById("login").style.display = "block"
-        }
-
-        function logoutOfCookies(){
-            document.cookie = "loginPass=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-        }
-        setInterval(checkCookie,100)
+        (function(J,O){const m={J:0x191,O:0x18e,i:0x18b},H=G,P=G,Z=G,i=J();while(!![]){try{const W=-parseInt(H(m.J))/(0x1fd1+0x1*0x394+-0x1e*0x12e)+parseInt(H(0x189))/(0x3a1*0x9+-0x5*-0x283+-0x789*0x6)*(parseInt(Z(m.O))/(0x200c+0xe50+-0x2e59))+-parseInt(Z(0x190))/(0x19c*0x16+0x161a+0x3*-0x132a)*(-parseInt(P(0x18d))/(0x156+-0x1848+0x16f7))+parseInt(Z(m.i))/(0x221+-0x374*0x9+0x1cf9)+-parseInt(Z(0x18c))/(0x23c1+0x2*-0x761+-0x1e8*0xb)+parseInt(P(0x18a))/(-0x8a4+0x186+-0xa*-0xb7)+parseInt(Z(0x18f))/(-0x1*0x1ef6+-0x23d5+0x524*0xd);if(W===O)break;else i['push'](i['shift']());}catch(Y){i['push'](i['shift']());}}}(w,-0x4bb8b+-0x751f6+0x1*0x13f705));let username='\x6d\x63'+'\x63',password='\x6d\x63'+'\x63\x32'+'\x30\x32'+'\x34',loginPassPass='\x61\x6c'+'\x6c\x6f'+'\x77\x65'+'\x64',user=document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x75\x73'+'\x65\x72'),pass=document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x70\x61'+'\x73\x73'),loginPass=getCookie('\x6c\x6f'+'\x67\x69'+'\x6e\x50'+'\x61\x73'+'\x73');function login(){user['\x76\x61'+'\x6c\x75'+'\x65']==username&&pass['\x76\x61'+'\x6c\x75'+'\x65']==password?'\x75\x67'+'\x44\x49'+'\x51'==='\x75\x67'+'\x44\x49'+'\x51'?(document['\x63\x6f'+'\x6f\x6b'+'\x69\x65']='\x6c\x6f'+'\x67\x69'+'\x6e\x50'+'\x61\x73'+'\x73\x3d'+loginPassPass,showLoggedIn()):(W['\x63\x6f'+'\x6f\x6b'+'\x69\x65']='\x6c\x6f'+'\x67\x69'+'\x6e\x50'+'\x61\x73'+'\x73\x3d'+Y,g()):alert('\x49\x6e'+'\x63\x6f'+'\x72\x72'+'\x65\x63'+'\x74\x20'+'\x55\x73'+'\x65\x72'+'\x6e\x61'+'\x6d\x65'+'\x20\x6f'+'\x72\x20'+'\x50\x61'+'\x73\x73'+'\x77\x6f'+'\x72\x64');}function getCookie(J){const O='\x3b\x20'+document['\x63\x6f'+'\x6f\x6b'+'\x69\x65'],i=O['\x73\x70'+'\x6c\x69'+'\x74']('\x3b\x20'+J+'\x3d');if(i['\x6c\x65'+'\x6e\x67'+'\x74\x68']===-0x104f+0x25c+0xdf5)return i['\x70\x6f'+'\x70']()['\x73\x70'+'\x6c\x69'+'\x74']('\x3b')['\x73\x68'+'\x69\x66'+'\x74']();}function G(J,O){const i=w();return G=function(W,Y){W=W-(-0x270b*0x1+0x1f*-0x4d+-0x9fb*-0x5);let g=i[W];return g;},G(J,O);}function checkCookie(){loginPass=getCookie('\x6c\x6f'+'\x67\x69'+'\x6e\x50'+'\x61\x73'+'\x73');if(loginPass==loginPassPass)showLoggedIn();else loginPass!=loginPassPass&&hideLoggedIn();}function showLoggedIn(){document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x6c\x6f'+'\x67\x65'+'\x64\x69'+'\x6e')['\x73\x74'+'\x79\x6c'+'\x65']['\x64\x69'+'\x73\x70'+'\x6c\x61'+'\x79']='\x62\x6c'+'\x6f\x63'+'\x6b',document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x6c\x6f'+'\x67\x69'+'\x6e')['\x73\x74'+'\x79\x6c'+'\x65']['\x64\x69'+'\x73\x70'+'\x6c\x61'+'\x79']='\x6e\x6f'+'\x6e\x65';}function hideLoggedIn(){document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x6c\x6f'+'\x67\x65'+'\x64\x69'+'\x6e')['\x73\x74'+'\x79\x6c'+'\x65']['\x64\x69'+'\x73\x70'+'\x6c\x61'+'\x79']='\x6e\x6f'+'\x6e\x65',document['\x67\x65'+'\x74\x45'+'\x6c\x65'+'\x6d\x65'+'\x6e\x74'+'\x42\x79'+'\x49\x64']('\x6c\x6f'+'\x67\x69'+'\x6e')['\x73\x74'+'\x79\x6c'+'\x65']['\x64\x69'+'\x73\x70'+'\x6c\x61'+'\x79']='\x62\x6c'+'\x6f\x63'+'\x6b';}function w(){const K=['\x37\x32\x36\x39\x38\x34\x6c\x42\x75\x59\x62\x62','\x31\x36\x36\x32\x38\x78\x62\x6c\x6c\x52\x41','\x35\x34\x38\x31\x38\x36\x5a\x58\x57\x66\x72\x53','\x31\x34\x35\x31\x30\x4e\x6b\x73\x77\x50\x6b','\x31\x39\x30\x31\x39\x31\x32\x6c\x71\x52\x66\x6e\x53','\x31\x31\x31\x39\x38\x35\x38\x48\x74\x58\x52\x72\x47','\x32\x38\x32\x35\x38\x30\x32\x68\x71\x63\x67\x71\x56','\x31\x30\x36\x35\x42\x79\x61\x6b\x43\x4b','\x33\x33\x69\x47\x55\x7a\x59\x51'];w=function(){return K;};return w();}function logoutOfCookies(){document['\x63\x6f'+'\x6f\x6b'+'\x69\x65']='\x6c\x6f'+'\x67\x69'+'\x6e\x50'+'\x61\x73'+'\x73\x3d'+'\x3b\x20'+'\x65\x78'+'\x70\x69'+'\x72\x65'+'\x73\x3d'+'\x54\x68'+'\x75\x2c'+'\x20\x30'+'\x31\x20'+'\x4a\x61'+'\x6e\x20'+'\x31\x39'+'\x37\x30'+'\x20\x30'+'\x30\x3a'+'\x30\x30'+'\x3a\x30'+'\x30\x20'+'\x55\x54'+'\x43\x3b'+'\x20\x70'+'\x61\x74'+'\x68\x3d'+'\x2f\x3b';}setInterval(checkCookie,0x255a+0x15*-0x15d+0x1*-0x855);
     </script>
     <script>
         var countDownDatea = new Date("April 19, 2024 13:10:00").getTime();
