--- a/projects/mainprojects/OxleyOpenDay/index.html
+++ b/projects/mainprojects/OxleyOpenDay/index.html
@@ -104,6 +104,7 @@
                 mobileBanner.style.display = 'none'
             }
         }
+        setInterval(widthChecker, 100)
         window.history.pushState("pageTitle", "Home - OxleyCC IT", "/?oxley");
     </script>
 </body>
