--- a/projects/mainprojects/OxleyOpenDay/11and12.html
+++ b/projects/mainprojects/OxleyOpenDay/11and12.html
@@ -111,21 +111,26 @@
         var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
         console.log("This device has a screen width of: "+width)
         //alert(width)
-        if(width <= "825"){
-            menu.style.display = 'none'
-            mobileMenu.style.display = 'block'
-            mobileImage.style.display = 'block'
-            computerImage.style.display = 'none'
-            computerImage2.style.display = 'none'
-            mobileBanner.style.display = 'block'
-        }else {
-            menu.style.display = 'block'
-            mobileMenu.style.display = 'none'
-            mobileImage.style.display = 'none'
-            computerImage.style.display = 'inline'
-            computerImage2.style.display = 'inline'
-            mobileBanner.style.display = 'none'
+        function widthCheck(){
+            width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
+            if(width <= "825"){
+                menu.style.display = 'none'
+                mobileMenu.style.display = 'block'
+                mobileImage.style.display = 'block'
+                computerImage.style.display = 'none'
+                computerImage2.style.display = 'none'
+                mobileBanner.style.display = 'block'
+            }else {
+                menu.style.display = 'block'
+                mobileMenu.style.display = 'none'
+                mobileImage.style.display = 'none'
+                computerImage.style.display = 'inline'
+                computerImage2.style.display = 'inline'
+                mobileBanner.style.display = 'none'
+            }
         }
+        setInterval(widthCheck,100)
+        window.history.pushState("pageTitle", "Year 11 & 12 - OxleyCC IT", "/?oxley");
     </script>
 </body>
 
