--- a/projects/mainprojects/OxleyOpenDay/contact.html
+++ b/projects/mainprojects/OxleyOpenDay/contact.html
@@ -70,23 +70,28 @@
         var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
         console.log("This device has a screen width of: "+width)
         //alert(width)
-        if(width <= "825"){
-            menu.style.display = 'none'
-            mobileMenu.style.display = 'block'
-            computerImage.style.display = 'none'
-            computerImage2.style.display = 'none'
-            computerImage3.style.display = 'none'
-            computerImage4.style.display = 'none'
-            mobileBanner.style.display = 'block'
-        }else {
-            menu.style.display = 'block'
-            mobileMenu.style.display = 'none'
-            computerImage.style.display = 'inline'
-            computerImage2.style.display = 'inline'
-            computerImage3.style.display = 'inline'
-            computerImage4.style.display = 'inline'
-            mobileBanner.style.display = 'none'
+        function widthCheck(){
+            width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
+            if(width <= "825"){
+                menu.style.display = 'none'
+                mobileMenu.style.display = 'block'
+                computerImage.style.display = 'none'
+                computerImage2.style.display = 'none'
+                computerImage3.style.display = 'none'
+                computerImage4.style.display = 'none'
+                mobileBanner.style.display = 'block'
+            }else {
+                menu.style.display = 'block'
+                mobileMenu.style.display = 'none'
+                computerImage.style.display = 'inline'
+                computerImage2.style.display = 'inline'
+                computerImage3.style.display = 'inline'
+                computerImage4.style.display = 'inline'
+                mobileBanner.style.display = 'none'
+            }
         }
+        setInterval(widthCheck,100)
+        window.history.pushState("pageTitle", "Contact - OxleyCC IT", "/?oxley");
     </script>
 </body>
 
