--- a/projects/mainprojects/OxleyOpenDay/contact.html
+++ b/projects/mainprojects/OxleyOpenDay/contact.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" type="image/x-icon">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" id="modBanImage"></a>
     </div>
     <div class="header" id="menu">
-        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
-        <a href="./index.html"><button id="buttonHeader">Home</button></a>
-        <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
-        <a href="./9and10.html"><button id="buttonHeader">9 & 10</button></a>
-        <a href="./11and12.html"><button id="buttonHeader">11 & 12</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" width="100px;"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="buttonHeader">Home</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="buttonHeader">7 & 8</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="buttonHeader">9 & 10</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="buttonHeader">11 & 12</button></a>
         <a href=""><button id="contact" class="selected">Contact</button></a>
     </div>
 
@@ -28,17 +28,17 @@
 
     <div>
         <center>
-            <a href="./index.html"><img src="./Picture5.png"></a>
+            <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png"></a>
             <h1 id="title">Contact</h1>
             <br>
             <div id="mobileMenu">
                 <center>
                     <br><Br>
-                    <a href="./index.html"><button id="mobButton">Home</button></a>
-                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a>
-                    <a href="./9and10.html"><button id="mobButton">9 & 10</button></a>
-                    <a href="./11and12.html"><button id="mobButton">11 & 12</button></a>
-                    <a href="./contact.html"><button id="mobButton" class="selected">Contact</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="mobButton">Home</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="mobButton">7 & 8</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="mobButton">9 & 10</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="mobButton">11 & 12</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/contact.html"><button id="mobButton" class="selected">Contact</button></a>
                 </center>
             </div>
             <p>
@@ -48,10 +48,10 @@
             <p>Please feel free to contact us on <b id="title2"><a href="mailto:admin@oxley.vic.edu.au">admin@oxley.vic.edu.au</a></b>, should you have any questions.</p>
             <br><br><br>
             <div class="outline" style="width: 1400px;">
-                <img src="./Picture3.png" height="200px;" id="compImage">
-                <img src="./Picture4.png" height="200px;" id="compImage2">
-                <img src="./Picture2.png" height="200px;" id="compImage3">
-                <img src="./Picture1.png" height="200px;" id="compImage4">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture3.png" height="200px;" id="compImage">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture4.png" height="200px;" id="compImage2">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture2.png" height="200px;" id="compImage3">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture1.png" height="200px;" id="compImage4">
                 <!--<img src="./HTML Classwork/Picture7.png" height="200px;">-->
             </div>
         </center>
