--- a/projects/mainprojects/OxleyOpenDay/index.html
+++ b/projects/mainprojects/OxleyOpenDay/index.html
@@ -7,29 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
-    <script src="./main.js"></script>
+    <link rel="shortcut icon" href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" type="image/x-icon">
+    <script src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/main.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" id="modBanImage"></a>
     </div>
     <div class="header" id="menu">
-        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
-        <a href="./index.html"><button id="homebtn" class="selected">Home</button></a>
-        <a href="./7and8.html"><button id="seveig">7 & 8</button></a>
-        <a href="./9and10.html"><button id="ninten">9 & 10</button></a>
-        <a href="./11and12.html"><button id="eletwe">11 & 12</button></a>
-        <a href="./contact.html"><button id="contact">Contact</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" width="100px;"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="homebtn" class="selected">Home</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="seveig">7 & 8</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="ninten">9 & 10</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="eletwe">11 & 12</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/contact.html"><button id="contact">Contact</button></a>
     </div>
 
     <p><br></p>
 
     <div>
         <center>
-            <a href="./index.html"><img src="./Picture5.png"></a>
+            <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png"></a>
             <h1 id="computerHeader" class="title">Information Technology (Senior School)</h1>
             <h1 id="mobileHeader1" class="title">Information Technology</h1>
             <h1 id="mobileHeader2" class="title">(Senior School)</h1>
@@ -37,10 +37,10 @@
             <div id="mobileMenu">
                 <center>
                     <br><br>
-                    <a href="./index.html"><button id="mobButton" class="selected">Home</button></a>
-                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
-                    <a href="./9and10.html"><button id="mobButton">9 & 10</button></a>
-                    <a href="./11and12.html"><button id="mobButton">11 & 12</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="mobButton" class="selected">Home</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="mobButton">9 & 10</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="mobButton">11 & 12</button></a>
                     <!--<a href="./contact.html"><button id="mobButton">Contact</button></a>-->
                 </center>
             </div>
@@ -54,11 +54,11 @@
             </p>
             <br><br>
             <div class="outline" style="width: 795px;">
-                <img src="./Picture6.png" height="200px;" id="schoolImage">
-                <img src="./Picture7.png" height="200px;" id="computerImage">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture6.png" height="200px;" id="schoolImage">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture7.png" height="200px;" id="computerImage">
             </div>
             <div id="mobileImage">
-                <img src="./Picture7.png" id="mobile-image">
+                <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture7.png" id="mobile-image">
             </div>
         </center>
     </div>
