--- a/projects/mainprojects/OxleyOpenDay/9and10.html
+++ b/projects/mainprojects/OxleyOpenDay/9and10.html
@@ -7,35 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Year 9 & 10 - OxleyCC IT</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./Picture5.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" type="image/x-icon">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5327146535138725" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="mobileBanner" id="mobileBanner">
-        <a href="./index.html"><img src="./Picture5.png" id="modBanImage"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" id="modBanImage"></a>
     </div>
     <div id="menu" class="header">
-        <a href="./index.html"><img src="./Picture5.png" width="100px;"></a>
-        <a href="./index.html"><button id="buttonHeader">Home</button></a>
-        <a href="./7and8.html"><button id="buttonHeader">7 & 8</button></a>
-        <a href="./9and10.html"><button id="buttonHeader" class="selected">9 & 10</button></a>
-        <a href="./11and12.html"><button id="buttonHeader">11 & 12</button></a>
-        <a href="./contact.html"><button id="contact">Contact</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png" width="100px;"></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="buttonHeader">Home</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="buttonHeader">7 & 8</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="buttonHeader" class="selected">9 & 10</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="buttonHeader">11 & 12</button></a>
+        <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/contact.html"><button id="contact">Contact</button></a>
     </div>
     <p><br></p>
     <div>
         <center>
             <!--<a href="./index.html"><img src="./HTML Classwork/Picture5.png"></a>-->
-            <a href="./index.html"><img src="./Picture5.png"></a>
+            <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture5.png"></a>
             <h1 id="title">Year 9 & 10 Information Technology</h1>
             <br><br><br><br>
             <div id="mobileMenu">
                 <center>
-                    <a href="./index.html"><button id="mobButton">Home</button></a>
-                    <a href="./7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
-                    <a href="./9and10.html"><button id="mobButton" class="selected">9 & 10</button></a>
-                    <a href="./11and12.html"><button id="mobButton">11 & 12</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html"><button id="mobButton">Home</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/7and8.html"><button id="mobButton">7 & 8</button></a><br><br>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/9and10.html"><button id="mobButton" class="selected">9 & 10</button></a>
+                    <a href="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/11and12.html"><button id="mobButton">11 & 12</button></a>
                     <!--<a href="./contact.html"><button id="mobButton">Contact</button></a>-->
                 </center>
             </div>
@@ -102,8 +102,8 @@
                     </script>
                     
             </table>
-            <img src="./Picture2.png" height="200px;" id="compImage">
-            <img src="./Picture2.png" height="400px;" id="mobImage">
+            <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture2.png" height="200px;" id="compImage">
+            <img src="https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/Picture2.png" height="400px;" id="mobImage">
         </center>
     </div>
 
