--- a/404.html
+++ b/404.html
@@ -49,6 +49,11 @@
 
         h1 {
             font-family: monospace;
+            font-size: xx-large;
+        }
+
+        p {
+            font-family: monospace;
         }
 
         @keyframes slide {
@@ -70,6 +75,7 @@
             bottom: 0;
             top: 0;
             z-index: -1;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -79,8 +85,8 @@
     <div class="bg bg3"></div>
     <div class="content">
         <h1>Oh dear...</h1>
-        <p>It seems like the page your looking for does not exsist.</p>
-        <a href="./index.html"><button>Return to Home</button></a>
+        <p>It seems like the page you're looking for does <b>not</b> exsist.</p><br>
+        <a href="./index.html"><button>Return to <b>Home</b></button></a>
     </div>
 </body>
 </html>
