--- a/projects/sideprojects/mcc/index.html
+++ b/projects/sideprojects/mcc/index.html
@@ -498,7 +498,7 @@
                     <i>
                         - Added Smash n Dab (itch.io game).<br>
                         - Feature buttons updated.<br>
-                        - Smash n Dab should work from the source.<br>
+                        - Wordle now includes the word 'Asian' upon popular request.<br>
                     </i><br>
                     <b>Misc:</b><br>
                     <i>
