--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             if(window.location.href == "https://drageno01.github.io/?mcc" || window.location.href == "https://drageno01.github.io/#mcc"){
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/index.html")
+            }
         }
     </script>
 </html>
