--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -85,7 +85,7 @@
       </ul>
     </div>
     <div class="input h-11 w-full flex border border-slate-200 rounded-md">
-      <input id="messageInput" type="text" class="outline-none flex-1 px-1" placeholder="Type a message to send..."></input>
+      <input id="messageInput" type="text" class="outline-none flex-1 px-1" placeholder="Type a message to send..." maxlength="100"></input>
       <div class="p-1">
         <button id="sendButton" class="bg-indigo-600 p-2 rounded-lg">
           <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="black"
