--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -30,17 +30,16 @@
 </head>
 
 <body id="body">
-  <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish.js"></script>
+  <script type="module" src="main.js"></script>
 
   <div id="joinView" class="bg-gray-100 w-96 items-center mx-auto flex flex-col mt-10 rounded-md p-4 space-y-4">
-    <h1 class="text-center font-bold">Join Chat</h1>
+    <h1 class="text-center font-bold" style="font-size: xx-large;">Join Chat</h1>
     <div class="flex space-x-1">
       <input id="usernameInput" type="text" class="bg-white border border-gray-200 rounded-md px-2"
-        placeholder="Enter your name" />
-      <button id="joinButton" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">
-        Join
-      </button>
+        placeholder="Enter a Username" />
+      <button id="joinButton" class="bg-indigo-600 px-2 py-1 text-sm text-white rounded-md">Join</button>
     </div>
+    <p>Google&trade; Sign-In <b>Required</b></p>
   </div>
 
   <div id="chatsView" class="w-64 h-96 mx-auto flex flex-col mt-10 hidden">
@@ -96,10 +95,7 @@
         </button>
       </div>
     </div>
+    <center><p style="font-size: xx-small;">There is a 100 character limit per message and a 10 second cooldown to prevent spam.</p></center>
   </div>
-
-  <script>
-    window.history.pushState("pageTitle", "DRAGE Chat", "/?chat")
-  </script>
 </body>
 </html>
