--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -97,5 +97,9 @@
     </div>
     <center><p style="font-size: xx-small;">There is a 100 character limit per message and a 10 second cooldown to prevent spam.</p></center>
   </div>
+
+  <script>
+    window.history.pushState("pageTitle", "DRAGE Chat", "/?chat");
+  </script>
 </body>
 </html>
