--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body id="body">
-  <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish.jslol"></script>
+  <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish"></script>
 
   <div id="joinView" class="bg-gray-100 w-96 items-center mx-auto flex flex-col mt-10 rounded-md p-4 space-y-4">
     <h1 class="text-center font-bold" style="font-size: xx-large;">Join Chat</h1>
