--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DRAGE Chat</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     .showUserId {
       font-family: monospace;
@@ -30,6 +32,16 @@
 </head>
 
 <body id="body">
+
+
+  
+  <div class="alert alert-danger alert-dismissible fade show">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched the issue... This may take a few hours.
+  </div>
+
+  
+  
   <script type="module" src="https://drageno01.github.io/projects/mainprojects/drage-chat/publish"></script>
 
   <div id="joinView" class="bg-gray-100 w-96 items-center mx-auto flex flex-col mt-10 rounded-md p-4 space-y-4">
